# pfmsoft-api-request

./: .env.dev  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/agents/: architecture_implementer.agent.md
.github/workflows/: pypi-publish.yaml
dev/docs/: agents.template.md  architectual-plan.md  workflow.md
src/api_request/: __init__.py  cache.py  logging_config.py  models.py  protocols.py  rate_limiter.py  request.py  request_tmp.py  settings.py
src/api_request/cache/: __init__.py  memory_cache.py  metadata_helpers.py  models.py  protocols.py
src/api_request/cache/sqlite_cache/: __init__.py  connection_helpers.py  query_helpers.py  sqlite_cache.py  table_definitions.sql
src/api_request/cli/: __init__.py  helpers.py  main_typer.py  request.py
src/api_request/cli/cache/: __init__.py
src/api_request/cli/request/: __init__.py  request.py  validate.py
src/api_request/example/: __init__.py  esi_link_api.py  example_requests.py  request_dispatch.py  request_dispatch_esi_link.py  settings.py  type_defs.py
src/api_request/example/actions/: __init__.py  models.py  protocols.py  response_action.py
src/api_request/example/app_data/: app_data.py  db_util.py  helpers.py  table_defs.sql  token_store.py
src/api_request/example/auth/: credential_manager_sqlite.py  models.py  oauth_metadata_sqlite.py  token_manager_sqlite.py  token_tool.py
src/api_request/example/auth_manager/: __init__.py  logging_config.py  models.py  protocols.py  settings.py  token_tool.py
src/api_request/example/cache/: __init__.py  diskcache_cache.py  json_disk_cache.py  models.py  sqlite_cache.py
src/api_request/example/cli/: callback.py  helpers.py  main_typer.py
src/api_request/example/execution/: http_executor.py  models.py
src/api_request/example/helpers/: __init__.py  canonicalize_url.py  file_safe_string.py  http_client.py  resolve_json_ref.py  save_text_file.py  settings_factories.py  timedelta_microseconds.py  timestamps.py
src/api_request/example/protocols/: cache_manager.py
src/api_request/example/request/: models.py
src/api_request/example/response/: models.py  response_factories.py
src/api_request/example/runtime/: models.py  runtime_request_factory.py
src/api_request/example/schema/: __init__.py  compatibility_dates_cache_sqlite.py  helpers.py  models.py  open_api_schema.py  schema_doc.py  (+1 more)
src/api_request/helpers/: http_session_factory.py
src/api_request/rate_limit/: __init__.py  aio_limiter.py  protocols.py
src/api_request/request/: __init__.py  api_requester.py  intermediate_models.py  models.py  protocols.py
src/pfmsoft/api_request/: __init__.py  settings.py
tests/: __init__.py  conftest.py
tests/api_request/: __init__.py  test_live_requests.py  test_logging_config.py  test_memory_cache.py  test_rate_limiter.py  test_request.py  test_settings.py
tests/api_request/cache/: test_connection_helpers.py  test_memory_cache.py  test_metadata_helpers.py  test_models.py  test_sqlite_cache.py
tests/api_request/cli/: test_helpers.py  test_main_typer.py  test_request_cli.py
tests/api_request/helpers/: test_http_session_factory.py  test_json_io.py  test_save_text_file.py
tests/api_request/rate_limit/: __init__.py  test_aio_limiter.py
tests/api_request/request/: test_api_requester.py  test_intermediate_models.py  test_live_paged_request.py  test_live_requests.py  test_models.py
tests/pfmsoft/api_request/: test_logging_config.py  test_settings.py
(+77 files in other folders)
